--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 def runeLiteVersion = 'latest.release'
 
 dependencies {
-	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	implementation 'org.apache.commons:commons-csv:1.13.0'
 
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
