--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ def runeLiteVersion = 'latest.release'
 
 dependencies {
 	implementation 'org.apache.commons:commons-csv:1.13.0'
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
 
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
