--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ def runeLiteVersion = 'latest.release'
 
 dependencies {
 	implementation 'org.apache.commons:commons-csv:1.13.0'
+	implementation 'com.google.protobuf:protobuf-java:3.22.0'
+	implementation("com.google.firebase:firebase-admin:9.4.3") {
+		exclude group: 'org.slf4j', module: 'slf4j-api'
+		exclude group: 'ch.qos.logback', module: 'logback-classic'
+	}
 
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
@@ -28,7 +33,7 @@ dependencies {
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
 
-group = 'com.example'
+group = 'com.caroadmap'
 version = '1.0-SNAPSHOT'
 
 tasks.withType(JavaCompile).configureEach {
@@ -39,7 +44,7 @@ tasks.withType(JavaCompile).configureEach {
 tasks.register('shadowJar', Jar) {
 	dependsOn configurations.testRuntimeClasspath
 	manifest {
-		attributes('Main-Class': 'com.example.ExamplePluginTest', 'Multi-Release': true)
+		attributes('Main-Class': 'com.caroadmap.CARoadmapPluginTest', 'Multi-Release': true)
 	}
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
