--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,19 @@ repositories {
 	mavenCentral()
 }
 
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(11)
+	}
+}
+
+
 def runeLiteVersion = 'latest.release'
 
 dependencies {
 	implementation 'org.apache.commons:commons-csv:1.13.0'
 	implementation 'com.google.protobuf:protobuf-java:3.22.0'
+	implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
 	implementation("com.google.firebase:firebase-admin:9.4.3") {
 		exclude group: 'org.slf4j', module: 'slf4j-api'
 		exclude group: 'ch.qos.logback', module: 'logback-classic'
