added plugin properties

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
+displayName=CARoadmap
+author=Izdar Tohti
+description=Generate a Combat Achievement roadmap based on your player stats and boss kill counts!
+tags=combat achievements, roadmap, progression, tier
 plugins=com.example.CARoadmapPlugin
