quickfix to plugin properties

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=CARoadmap
 author=Izdar Tohti
 description=Generate a Combat Achievement roadmap based on your player stats and boss kill counts!
 tags=combat achievements, roadmap, progression, tier
-plugins=com.example.CARoadmapPlugin
+plugins=com.caroadmap.CARoadmapPlugin
